# presidentielle-2027-polls

./: .env.example  .gitignore  AGENT.md  METHODOLOGIE_BIAIS_ET_AJUSTEMENTS.md  Makefile  README.md  README_extraction_wiki_sondages.md  alembic.ini  docker-compose.yml  make_wiki_datasets.py  pyproject.toml  sondages_legislatives_2024_wikipedia_tables.csv  sondages_presidentielle_2022_wikipedia_tables.csv  sondages_presidentielle_2027_wikipedia_tables.csv  wikipedia_sondages_2022_2024_2027_tables.xlsx
.devcontainer/: devcontainer.json
.streamlit/: config.toml
alembic/: env.py
data/imported_wiki_zip/: README_wiki_data_extracted.md  legislatives_2024_wiki_lignes.csv  presidentielle_2022_wiki_lignes.csv  presidentielle_2027_wiki_lignes.csv  wiki_2022.txt  wiki_2024_legislatives.txt  wiki_2027.txt
data/processed/: sample_polls.csv  wikipedia_2027_polls_normalized.csv  wikipedia_2027_polls_normalized_v2.csv
data/reference/: datasets_metadata.csv  historical_polls_2022_first_round.csv  historical_results_2022_presidential_first_round.csv  historical_results_2024_legislatives_blocs.csv  historical_results_2024_legislatives_seats.csv  latest_web_sources.csv  manual_first_round_biases.csv  manual_second_round_bloc_overrides.csv  (+2 more)
notebooks/: 01_sources_metadata.ipynb  02_first_round_raw.ipynb  03_second_round_raw.ipynb  04_error_bars_raw.ipynb  05_corrected_dataset.ipynb
tests/: test_adjustments.py  test_canonicalization.py  test_coverage.py  test_database.py  test_excel_parser.py  test_excel_parser_v2.py  test_normalizer.py  test_party_assets.py  test_polling_average.py  test_wiki_api.py
(+76 files in other folders)
