[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presidentielle-2027-polls"
version = "0.1.0"
description = "Polling ingestion, normalization, analytics and visualization toolkit for the 2027 French presidential election."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pdfplumber>=0.11",
  "plotly>=5.22",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dateutil>=2.9",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "streamlit>=1.35",
  "statsmodels>=0.14",
  "typer>=0.12",
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.5",
  "scipy>=1.13",
]
dev = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "mypy>=1.10",
  "nbformat>=5.10",
  "notebook>=7.2",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4.8",
]

[project.scripts]
presidentielle2027 = "presidentielle2027.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = []
